Добавляет исправления открытого меню

--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -63,6 +63,8 @@
   gap: 28px;
   padding: 35px 25px;
   min-width: 286px;
+  max-height: 80vh;
+  overflow-y: auto;
   background-color: $color-default-blue;
   border-radius: 16px;
   z-index: 2;
