Добавляет плавную анимацию на меню

--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -87,8 +87,7 @@
   &::before {
     content: "";
     position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
+    top: 4px;
     right: 4px;
     width: 46px;
     height: 46px;
