--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -1,6 +1,6 @@
 // ЗАКРЫТЫЙ СПИСОК МЕНЮ
 .site-list {
-  display: none;
+  opacity: 0;
   margin: 0;
   padding: 0;
   list-style-type: none;
@@ -68,6 +68,9 @@
   background-color: $color-default-blue;
   border-radius: 16px;
   z-index: 2;
+  transition: 0.5s;
+  transform-origin: right;
+  opacity: 1;
 
   @include vp-767 {
     min-width: 100%;
