Добавляет проверку ПП всего сайта

--- a/source/sass/blocks/footer-header.scss
+++ b/source/sass/blocks/footer-header.scss
@@ -12,6 +12,7 @@
 
   @include vp-767 {
     flex-direction: column;
+    gap: 12px;
   }
 }
 
@@ -29,7 +30,7 @@
 
   @include vp-767 {
     justify-content: center;
-    gap: 25px 30px;
+    gap: 4px 30px;
     width: 100%;
   }
 }
