--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -30,12 +30,12 @@
   line-height: 50px;
 
   @include vp-1199 {
-    margin: 0 0 30px;
+    margin: 0 0 29px;
     font-size: 34px;
   }
 
   @include vp-767 {
-    margin: 0 0 35px;
+    margin: 0 0 32px;
     font-size: 20px;
     line-height: 20px;
   }
@@ -54,18 +54,18 @@
 
   @include vp-1199 {
     width: 100%;
-    margin: 0 0 80px;
+    margin: 0 0 58px;
   }
 
   @include vp-767 {
     flex-direction: column;
-    gap: 20px;
-    margin: 0 0 60px;
+    gap: 10px;
+    margin: 0 0 50px;
   }
 }
 
 .contacts__item h3 {
-  margin: 0 0 15px;
+  margin: 0 0 17px;
   color: $color-timber-wolf;
   font-size: 12px;
   font-weight: 400;
@@ -74,17 +74,19 @@
   text-transform: uppercase;
 
   @include vp-767 {
-    margin: 0 0 5px;
+    margin: 0 0 8px;
   }
 }
 
 .contacts__item span {
+  display: block;
   font-size: 16px;
   font-weight: 400;
   line-height: 26px;
 
   @include vp-1199 {
     line-height: 20px;
+    width: 270px;
   }
 
   @include vp-767 {
@@ -144,6 +146,10 @@
     width: 100%;
     height: 1px;
     background-color: $color-default-white-opacity20;
+
+    @include vp-1199 {
+      top: -32px;
+    }
 
     @include vp-767 {
       top: -30px;
