--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -2,7 +2,11 @@
   padding: 120px 0 55px;
 
   @include vp-1199 {
-    padding: 67px 0 55px;
+    padding: 100px 0 55px;
+  }
+
+  @include vp-767 {
+    padding: 65px 0 23px;
   }
 }
 
@@ -24,18 +28,18 @@
 }
 
 .form__content {
-  padding: 60px 74px 51px;
+  padding: 80px 74px 51px;
   width: 498px;
   background-color: $color-default-blue;
   border-radius: 16px;
 
   @include vp-1199 {
-    padding: 55px 44px 51px;
+    padding: 60px 44px 59px;
     width: 442px;
   }
 
   @include vp-767 {
-    padding: 56px 15px 50px;
+    padding: 51px 15px 50px;
     width: 100%;
   }
 }
@@ -45,6 +49,15 @@
   flex-direction: column;
   gap: 27px;
   margin: 0 0 18px;
+
+  @include vp-1199 {
+    margin: 0 0 33px;
+  }
+
+  @include vp-767 {
+    gap: 17px;
+    margin: 0 0 26px;
+  }
 }
 
 .form__header h2 {
@@ -81,8 +94,13 @@
 .form form {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 17px;
   margin: 0 0 40px;
+
+  @include vp-767 {
+    gap: 21px;
+    margin: 0 0 32px;
+  }
 }
 
 .form__btn {
