--- a/source/sass/blocks/grant.scss
+++ b/source/sass/blocks/grant.scss
@@ -11,7 +11,7 @@
   @include vp-1199 {
     grid-template-columns: 1fr;
     gap: 47px;
-    padding: 98px 0 130px;
+    padding: 98px 0 102px;
   }
 
   @include vp-767 {
@@ -52,7 +52,7 @@
   color: $color-timber-wolf;
 
   @include vp-1199 {
-    margin: 0 0 35px;
+    margin: 0 140px 35px 0;
     line-height: 20px;
   }
 
@@ -111,6 +111,7 @@
 
   @include vp-1199 {
     grid-template-columns: repeat(2, 1fr);
+    gap: 30px 45px;
   }
 
   @include vp-767 {
@@ -141,6 +142,7 @@
     padding: 18px 24px;
 
     &::before {
+      top: 10px;
       width: 32px;
       height: 32px;
     }
@@ -160,6 +162,7 @@
   text-transform: uppercase;
 
   @include vp-767 {
+    top: 10px;
     font-size: 18px;
     line-height: 18px;
   }
