--- a/source/sass/blocks/input-text.scss
+++ b/source/sass/blocks/input-text.scss
@@ -11,12 +11,20 @@
   margin: 0;
   padding: 0;
   list-style-type: none;
+
+  @include vp-767 {
+    gap: 22px;
+  }
 }
 
 .input-text__item {
   display: flex;
   flex-direction: column;
   gap: 8px;
+
+  @include vp-767 {
+    gap: 10px;
+  }
 }
 
 .input-text__label {
@@ -41,6 +49,10 @@
   border: 1px solid $color-default-white-opacity30;
   border-radius: 8px;
   order: 2;
+
+  @include vp-767 {
+    padding: 10px 25px;
+  }
 
   @include hover {
     border: 1px solid $color-default-white;
