--- a/source/sass/blocks/news-card.scss
+++ b/source/sass/blocks/news-card.scss
@@ -209,6 +209,10 @@
   background-color: $color-timber-wolf;
   border-radius: 0 12px 0 0;
 
+  @include vp-1199 {
+    padding: 8px 18px 10px 0;
+  }
+
   @include vp-767 {
     padding: 13px 10px 10px 0;
   }
