--- a/source/sass/blocks/news.scss
+++ b/source/sass/blocks/news.scss
@@ -49,6 +49,7 @@
 
   @include vp-1199 {
     gap: 10px;
+    margin: 0 0 32px;
   }
 
   @include vp-767 {
@@ -102,6 +103,10 @@
 
 .news__swiper {
   margin: 0 0 40px;
+
+  @include vp-1199 {
+    margin: 0 0 30px;
+  }
 
   @include vp-767 {
     margin: 0 0 24px;
