--- a/source/sass/blocks/programs-card.scss
+++ b/source/sass/blocks/programs-card.scss
@@ -75,6 +75,13 @@
 
   @include vp-1199 {
     width: calc(100% - 111px);
+    min-width: 173px;
+  }
+
+  @include vp-767 {
+    padding: 20px 18px 5px;
+    width: calc(100% - 134px);
+    min-width: 146px;
   }
 }
 
@@ -116,7 +123,14 @@
 
   @include vp-1199 {
     gap: 45px;
+    padding: 8px 18px 10px 18px;
     width: calc(100% - 21px);
+    min-height: 77px;
+  }
+
+  @include vp-767 {
+    width: 100%;
+    min-height: 69px;
   }
 }
 
