--- a/source/sass/blocks/reviews-card.scss
+++ b/source/sass/blocks/reviews-card.scss
@@ -7,10 +7,14 @@
   border: 1px solid $color-default-blue;
   border-radius: 16px;
 
+  @include vp-1199 {
+    padding: 50px 50px 45px;
+  }
+
   @include vp-767 {
     grid-template-columns: 1fr;
     gap: 0;
-    padding: 30px 15px 25px;
+    padding: 30px 13px 25px 15px;
   }
 }
 
