--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -9,7 +9,7 @@
   max-width: 1440px;
 
   @include vp-1199 {
-    padding: 113px 0 110px 45px;
+    padding: 92px 0 100px 45px;
   }
 
   @include vp-767 {
@@ -43,6 +43,10 @@
 
 .reviews__swiper {
   margin: 45px 0 40px;
+
+  @include vp-1199 {
+    margin: 40px 0 40px;
+  }
 
   @include vp-767 {
     margin: 30px 0 35px;
