--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -7,6 +7,7 @@
   list-style-type: none;
 
   @include vp-1199 {
+    gap: 10px;
     order: 3;
   }
 }
@@ -21,4 +22,9 @@
   width: 36px;
   height: 36px;
   border-radius: 50%;
+
+  @include vp-767 {
+    width: 26px;
+    height: 26px;
+  }
 }
