--- a/css/style.css
+++ b/css/style.css
@@ -2062,6 +2062,7 @@ html {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -2949,10 +2950,7 @@ button,
 .main-nav__toggle-circle::before {
   content: "";
   position: absolute;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
+  top: 4px;
   right: 4px;
   width: 46px;
   height: 46px;
@@ -3050,7 +3048,9 @@ button,
 }
 
 .site-list {
-  display: none;
+  position: absolute;
+  top: -550px;
+  opacity: 0;
   margin: 0;
   padding: 0;
   list-style-type: none;
@@ -3132,9 +3132,17 @@ button,
   gap: 28px;
   padding: 35px 25px;
   min-width: 286px;
+  max-height: 70vh;
+  overflow-y: auto;
   background-color: #316dc2;
   border-radius: 16px;
   z-index: 2;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  -webkit-transform-origin: right;
+  -ms-transform-origin: right;
+  transform-origin: right;
+  opacity: 1;
 }
 
 .main-nav--opened .site-list__link {
@@ -4508,7 +4516,7 @@ button,
 }
 
 .contacts__item h3 {
-  margin: 0 0 15px;
+  margin: 0 0 17px;
   color: #f0efe9;
   font-size: 12px;
   font-weight: 400;
@@ -4518,6 +4526,7 @@ button,
 }
 
 .contacts__item span {
+  display: block;
   font-size: 16px;
   font-weight: 400;
   line-height: 26px;
@@ -4594,7 +4603,7 @@ button,
 }
 
 .form__content {
-  padding: 60px 74px 51px;
+  padding: 80px 74px 51px;
   width: 498px;
   background-color: #316dc2;
   border-radius: 16px;
@@ -4633,7 +4642,7 @@ button,
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
-  gap: 20px;
+  gap: 17px;
   margin: 0 0 40px;
 }
 
@@ -5881,6 +5890,7 @@ button,
 
   .programs-card__header {
     width: calc(100% - 111px);
+    min-width: 173px;
   }
 
   .programs-card__header h3 {
@@ -5890,7 +5900,9 @@ button,
 
   .programs-card__info {
     gap: 45px;
+    padding: 8px 18px 10px 18px;
     width: calc(100% - 21px);
+    min-height: 77px;
   }
 
   .programs-card__info p {
@@ -5901,7 +5913,7 @@ button,
     -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
     gap: 47px;
-    padding: 98px 0 130px;
+    padding: 98px 0 102px;
   }
 
   .grant__header {
@@ -5914,7 +5926,7 @@ button,
   }
 
   .grant__header p {
-    margin: 0 0 35px;
+    margin: 0 140px 35px 0;
     line-height: 20px;
   }
 
@@ -5931,6 +5943,7 @@ button,
   .grant__list {
     -ms-grid-columns: (1fr)[2];
     grid-template-columns: repeat(2, 1fr);
+    gap: 30px 45px;
   }
 
   .grant__item h4 {
@@ -5948,10 +5961,15 @@ button,
 
   .news__controls {
     gap: 10px;
+    margin: 0 0 32px;
   }
 
   .news__control {
     padding: 10px 20px;
+  }
+
+  .news__swiper {
+    margin: 0 0 30px;
   }
 
   .news-card--internships {
@@ -5999,6 +6017,10 @@ button,
     line-height: 24px;
   }
 
+  .news-card__info {
+    padding: 8px 18px 10px 0;
+  }
+
   .news-card__info p {
     line-height: 20px;
   }
@@ -6008,6 +6030,7 @@ button,
   }
 
   .questions__wrapper h2 {
+    margin: 0 0 41px;
     font-size: 34px;
     line-height: 50px;
   }
@@ -6024,7 +6047,7 @@ button,
 
   .question h3 {
     font-size: 22px;
-    line-height: 26px;
+    line-height: 21px;
   }
 
   .question__content p {
@@ -6032,15 +6055,23 @@ button,
   }
 
   .reviews__wrapper {
-    padding: 113px 0 110px 45px;
+    padding: 92px 0 100px 45px;
   }
 
   .reviews__header h2 {
     font-size: 34px;
   }
 
+  .reviews__swiper {
+    margin: 40px 0 40px;
+  }
+
   .reviews__controls {
     padding: 0 45px 0 0;
+  }
+
+  .reviews-card {
+    padding: 50px 50px 45px;
   }
 
   .reviews-card__header h3 {
@@ -6066,25 +6097,30 @@ button,
   }
 
   .contacts__header h2 {
-    margin: 0 0 30px;
+    margin: 0 0 29px;
     font-size: 34px;
   }
 
   .contacts__list {
     width: 100%;
-    margin: 0 0 80px;
+    margin: 0 0 58px;
   }
 
   .contacts__item span {
     line-height: 20px;
+    width: 270px;
   }
 
   .contacts__item a {
     line-height: 20px;
   }
 
+  .contacts__map::before {
+    top: -32px;
+  }
+
   .form__wrapper {
-    padding: 67px 0 55px;
+    padding: 100px 0 55px;
   }
 
   .form__image {
@@ -6092,8 +6128,12 @@ button,
   }
 
   .form__content {
-    padding: 55px 44px 51px;
+    padding: 60px 44px 59px;
     width: 442px;
+  }
+
+  .form__header {
+    margin: 0 0 33px;
   }
 
   .form__header h2 {
@@ -6126,6 +6166,7 @@ button,
   }
 
   .social {
+    gap: 10px;
     -webkit-box-ordinal-group: 4;
     -ms-flex-order: 3;
     order: 3;
@@ -6456,9 +6497,20 @@ button,
     aspect-ratio: 290/400;
   }
 
+  .programs-card__header {
+    padding: 20px 18px 5px;
+    width: calc(100% - 134px);
+    min-width: 146px;
+  }
+
   .programs-card__header h3 {
     font-size: 16px;
     line-height: 18px;
+  }
+
+  .programs-card__info {
+    width: 100%;
+    min-height: 69px;
   }
 
   .programs-card__info p {
@@ -6500,11 +6552,13 @@ button,
   }
 
   .grant__item::before {
+    top: 10px;
     width: 32px;
     height: 32px;
   }
 
   .grant__item span {
+    top: 10px;
     font-size: 18px;
     line-height: 18px;
   }
@@ -6582,6 +6636,14 @@ button,
     right: 15px;
   }
 
+  .swiper-slide {
+    height: auto;
+  }
+
+  .swiper-slide:first-child {
+    height: auto;
+  }
+
   .swiper-slide .news-card__header {
     width: calc(100% - 90px);
     min-width: 200px;
@@ -6604,6 +6666,10 @@ button,
 
   .news-card__wrapper {
     min-height: 330px;
+  }
+
+  .news-card--secondary .news-card__wrapper {
+    min-height: 240px;
   }
 
   .news-card__header h3 {
@@ -6690,7 +6756,7 @@ button,
     -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
     gap: 0;
-    padding: 30px 15px 25px;
+    padding: 30px 13px 25px 15px;
   }
 
   .reviews-card__header {
@@ -6751,7 +6817,7 @@ button,
   }
 
   .contacts__header h2 {
-    margin: 0 0 35px;
+    margin: 0 0 32px;
     font-size: 20px;
     line-height: 20px;
   }
@@ -6761,12 +6827,12 @@ button,
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column;
-    gap: 20px;
-    margin: 0 0 60px;
+    gap: 10px;
+    margin: 0 0 50px;
   }
 
   .contacts__item h3 {
-    margin: 0 0 5px;
+    margin: 0 0 8px;
   }
 
   .contacts__item span {
@@ -6789,13 +6855,22 @@ button,
     min-height: 240px;
   }
 
+  .form__wrapper {
+    padding: 65px 0 23px;
+  }
+
   .form__image {
     background-image: none;
   }
 
   .form__content {
-    padding: 56px 15px 50px;
+    padding: 51px 15px 50px;
     width: 100%;
+  }
+
+  .form__header {
+    gap: 17px;
+    margin: 0 0 26px;
   }
 
   .form__header h2 {
@@ -6807,15 +6882,34 @@ button,
     font-size: 14px;
   }
 
+  .form form {
+    gap: 21px;
+    margin: 0 0 32px;
+  }
+
+  .input-text__list {
+    gap: 22px;
+  }
+
+  .input-text__item {
+    gap: 10px;
+  }
+
   .input-text__label {
     font-size: 12px;
     line-height: 14px;
+  }
+
+  .input-text__item input,
+  .input-text__item textarea {
+    padding: 10px 25px;
   }
 
   .footer__wrapper {
     -webkit-box-pack: center;
     -ms-flex-pack: center;
     justify-content: center;
+    gap: 12px;
     padding: 5px 0 40px;
   }
 
@@ -6824,18 +6918,24 @@ button,
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column;
+    gap: 12px;
   }
 
   .footer-header__list {
     -webkit-box-pack: center;
     -ms-flex-pack: center;
     justify-content: center;
-    gap: 25px 30px;
+    gap: 4px 30px;
     width: 100%;
   }
 
   .footer-header__link {
     font-size: 14px;
+  }
+
+  .social__link {
+    width: 26px;
+    height: 26px;
   }
 
   .footer-footer {
