Добавляет исправления блока о нас

--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -129,7 +129,7 @@
   grid-template-columns: repeat(2, 1fr);
   gap: 52px;
   margin: 0;
-  padding: 90px 106px 55px 125px;
+  padding: 90px 30px 55px;
   color: $color-default-white;
   background-color: $color-default-blue;
   border-radius: 20px;
@@ -152,7 +152,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin: 0 0 0 10px;
   padding: 30px 60px;
+  max-width: 478px;
   border: 1px solid $color-timber-wolf;
   border-radius: 16px;
 
@@ -172,12 +174,22 @@
     flex-direction: column;
     align-items: flex-start;
     gap: 8px;
+    margin: 0;
     padding: 30px 28px 25px;
   }
 
   @include vp-767 {
     gap: 5px;
     padding: 20px 17px 21px 19px;
+  }
+}
+
+.about__item:nth-child(2n + 1) {
+  justify-self: end;
+  margin: 0 -10px 0 0;
+
+  @include vp-1199 {
+    margin: 0;
   }
 }
 
