Добавляет ПП сайта

--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -64,6 +64,10 @@
   }
 }
 
+.contacts__item:first-child {
+  width: 270px;
+}
+
 .contacts__item h3 {
   margin: 0 0 17px;
   color: $color-timber-wolf;
@@ -78,15 +82,11 @@
   }
 }
 
-.contacts__item span {
-  display: block;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 26px;
+.contacts__item p {
+  margin: 0;
 
   @include vp-1199 {
     line-height: 20px;
-    width: 270px;
   }
 
   @include vp-767 {
