--- a/source/sass/blocks/news-card.scss
+++ b/source/sass/blocks/news-card.scss
@@ -55,7 +55,6 @@
 }
 
 .swiper-slide .news-card__header {
-  padding: 6px 5px 0 0;
   width: calc(100% - 72px);
   min-width: 214px;
 
@@ -76,11 +75,13 @@
   min-width: 214px;
 
   @include vp-1199 {
+    padding: 4px 18px 0 0;
     width: calc(100% - 117px);
     min-width: 207px;
   }
 
   @include vp-767 {
+    padding: 10px 10px 5px 0;
     width: calc(100% - 90px);
     min-width: 200px;
   }
@@ -170,9 +171,14 @@
 
 .news-card__header {
   position: relative;
+  padding: 6px 5px 0 0;
   color: $color-default-blue;
   background-color: $color-timber-wolf;
   border-radius: 0 12px 0 0;
+
+  @include vp-767 {
+    padding: 10px 10px 5px 0;
+  }
 }
 
 .news-card__header svg {
