--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -7,6 +7,7 @@
   padding: 5px 0 50px;
 
   @include vp-767 {
+    flex-direction: column;
     justify-content: center;
     gap: 12px;
     padding: 5px 0 40px;
