--- a/source/sass/blocks/reviews-card.scss
+++ b/source/sass/blocks/reviews-card.scss
@@ -1,8 +1,5 @@
 .reviews-card {
-  display: grid;
-  grid-template-columns: auto 1fr;
-  gap: 26px;
-  padding: 50px 50px 40px;
+  padding: 50px 30px 40px;
   height: auto;
   border: 1px solid $color-default-blue;
   border-radius: 16px;
@@ -12,9 +9,24 @@
   }
 
   @include vp-767 {
+    padding: 30px 13px 25px 15px;
+  }
+}
+
+.reviews-card__wrapper {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  gap: 26px;
+  margin: 0 auto;
+  max-width: 509px;
+
+  @include vp-1199 {
+    max-width: 100%;
+  }
+
+  @include vp-767 {
     grid-template-columns: 1fr;
     gap: 0;
-    padding: 30px 13px 25px 15px;
   }
 }
 
