--- a/css/style.css
+++ b/css/style.css
@@ -3129,8 +3129,8 @@ button,
   -webkit-box-align: start;
   -ms-flex-align: start;
   align-items: flex-start;
-  gap: 28px;
-  padding: 35px 25px;
+  gap: 15px;
+  padding: 28px 25px;
   min-width: 286px;
   max-height: 70vh;
   overflow-y: auto;
@@ -3180,7 +3180,7 @@ button,
   -webkit-box-align: start;
   -ms-flex-align: start;
   align-items: flex-start;
-  gap: 20px;
+  gap: 12px;
   margin: 5px 0 0;
 }
 
@@ -3208,7 +3208,7 @@ button,
   -webkit-box-align: start;
   -ms-flex-align: start;
   align-items: flex-start;
-  gap: 16px;
+  gap: 1px;
   margin: 0 0 0 16px;
   padding: 0;
   list-style-type: none;
@@ -3396,7 +3396,7 @@ button,
   grid-template-columns: repeat(2, 1fr);
   gap: 52px;
   margin: 0;
-  padding: 90px 106px 55px 125px;
+  padding: 90px 30px 55px;
   color: #ffffff;
   background-color: #316dc2;
   border-radius: 20px;
@@ -3414,7 +3414,9 @@ button,
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
+  margin: 0 0 0 10px;
   padding: 30px 60px;
+  max-width: 478px;
   border: 1px solid #f0efe9;
   border-radius: 16px;
 }
@@ -3431,6 +3433,12 @@ button,
   height: 42px;
   background-color: #316dc2;
   border-radius: 50%;
+}
+
+.about__item:nth-child(2n+1) {
+  -ms-grid-column-align: end;
+  justify-self: end;
+  margin: 0 -10px 0 0;
 }
 
 .about__item svg {
@@ -3474,7 +3482,10 @@ button,
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  padding: 0 0 123px;
+  margin: 0 auto;
+  padding: 0 100px 123px;
+  width: 100%;
+  max-width: 1440px;
 }
 
 .programs__header h2 {
@@ -3576,7 +3587,7 @@ button,
   position: relative;
   padding: 13px 18px 1px;
   width: calc(100% - 158px);
-  min-width: 214px;
+  min-width: 194px;
   background-color: #f0efe9;
   border-radius: 12px 12px 0 0;
 }
@@ -3935,7 +3946,6 @@ button,
 }
 
 .swiper-slide .news-card__header {
-  padding: 6px 5px 0 0;
   width: calc(100% - 72px);
   min-width: 214px;
 }
@@ -4005,6 +4015,7 @@ button,
 
 .news-card__header {
   position: relative;
+  padding: 6px 5px 0 0;
   color: #316dc2;
   background-color: #f0efe9;
   border-radius: 0 12px 0 0;
@@ -4361,15 +4372,20 @@ button,
 }
 
 .reviews-card {
+  padding: 50px 30px 40px;
+  height: auto;
+  border: 1px solid #316dc2;
+  border-radius: 16px;
+}
+
+.reviews-card__wrapper {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: auto 1fr;
   grid-template-columns: auto 1fr;
   gap: 26px;
-  padding: 50px 50px 40px;
-  height: auto;
-  border: 1px solid #316dc2;
-  border-radius: 16px;
+  margin: 0 auto;
+  max-width: 509px;
 }
 
 .reviews-card__header {
@@ -4515,6 +4531,10 @@ button,
   border-radius: 16px;
 }
 
+.contacts__item:first-child {
+  width: 270px;
+}
+
 .contacts__item h3 {
   margin: 0 0 17px;
   color: #f0efe9;
@@ -4525,11 +4545,8 @@ button,
   text-transform: uppercase;
 }
 
-.contacts__item span {
-  display: block;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 26px;
+.contacts__item p {
+  margin: 0;
 }
 
 .contacts__item a {
@@ -4642,7 +4659,7 @@ button,
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
-  gap: 17px;
+  gap: 20px;
   margin: 0 0 40px;
 }
 
@@ -5074,7 +5091,7 @@ button,
   flex-direction: column;
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(13, 29, 51, 0.4);
   -webkit-transform: scale(1.2);
   -ms-transform: scale(1.2);
   transform: scale(1.2);
@@ -5123,7 +5140,7 @@ button,
 .modal__content {
   position: relative;
   width: 510px;
-  padding: 60px 80px;
+  padding: 54px 60px;
   border-radius: 16px;
   background-color: #ffffff;
 }
@@ -5198,13 +5215,12 @@ button,
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  gap: 20px;
   padding: 0 20px;
   margin: 0 0 30px;
 }
 
 .modal__header h2 {
-  margin: 0;
+  margin: 0 0 40px 0;
   color: #316dc2;
   font-size: 32px;
   font-weight: 400;
@@ -5844,7 +5860,12 @@ button,
     -ms-flex-align: start;
     align-items: flex-start;
     gap: 8px;
+    margin: 0;
     padding: 30px 28px 25px;
+  }
+
+  .about__item:nth-child(2n+1) {
+    margin: 0;
   }
 
   .about__item h3 {
@@ -5859,15 +5880,23 @@ button,
   }
 
   .programs__wrapper {
-    padding: 0 0 100px;
+    padding: 0 0 100px 45px;
   }
 
   .programs__header h2 {
     font-size: 34px;
   }
 
+  .programs__link {
+    margin: 0 45px 0 0;
+  }
+
   .programs__swiper {
     margin: 40px 0;
+  }
+
+  .programs__controls {
+    padding: 0 45px 0 0;
   }
 
   .programs-card--internships {
@@ -5994,6 +6023,7 @@ button,
   }
 
   .swiper-slide:first-child .news-card__header {
+    padding: 4px 18px 0 0;
     width: calc(100% - 117px);
     min-width: 207px;
   }
@@ -6074,6 +6104,10 @@ button,
     padding: 50px 50px 45px;
   }
 
+  .reviews-card__wrapper {
+    max-width: 100%;
+  }
+
   .reviews-card__header h3 {
     font-size: 20px;
   }
@@ -6106,9 +6140,8 @@ button,
     margin: 0 0 58px;
   }
 
-  .contacts__item span {
+  .contacts__item p {
     line-height: 20px;
-    width: 270px;
   }
 
   .contacts__item a {
@@ -6143,6 +6176,10 @@ button,
 
   .form__header p {
     line-height: 20px;
+  }
+
+  .form form {
+    gap: 17px;
   }
 
   .footer-header {
@@ -6438,7 +6475,7 @@ button,
   }
 
   .programs__wrapper {
-    padding: 0 0 67px;
+    padding: 0 15px 67px;
   }
 
   .programs__header {
@@ -6469,6 +6506,7 @@ button,
     -ms-flex-preferred-size: auto;
     flex-basis: auto;
     gap: 0;
+    padding: 0;
     -webkit-box-ordinal-group: 3;
     -ms-flex-order: 2;
     order: 2;
@@ -6650,6 +6688,7 @@ button,
   }
 
   .swiper-slide:first-child .news-card__header {
+    padding: 10px 10px 5px 0;
     width: calc(100% - 90px);
     min-width: 200px;
   }
@@ -6670,6 +6709,10 @@ button,
 
   .news-card--secondary .news-card__wrapper {
     min-height: 240px;
+  }
+
+  .news-card__header {
+    padding: 10px 10px 5px 0;
   }
 
   .news-card__header h3 {
@@ -6753,10 +6796,13 @@ button,
   }
 
   .reviews-card {
+    padding: 30px 13px 25px 15px;
+  }
+
+  .reviews-card__wrapper {
     -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
     gap: 0;
-    padding: 30px 13px 25px 15px;
   }
 
   .reviews-card__header {
@@ -6835,7 +6881,7 @@ button,
     margin: 0 0 8px;
   }
 
-  .contacts__item span {
+  .contacts__item p {
     font-size: 14px;
   }
 
@@ -6906,6 +6952,10 @@ button,
   }
 
   .footer__wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
     -webkit-box-pack: center;
     -ms-flex-pack: center;
     justify-content: center;
