--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -181,6 +181,7 @@
   @include vp-767 {
     gap: 5px;
     padding: 20px 17px 21px 19px;
+    max-width: 100%;
   }
 }
 
@@ -190,6 +191,11 @@
 
   @include vp-1199 {
     margin: 0;
+  }
+
+  @include vp-767 {
+    justify-self: stretch;
+    max-width: 100%;
   }
 }
 
