--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -9,7 +9,7 @@
   align-items: center;
   flex-wrap: wrap;
   gap: 73px;
-  padding: 120px 0;
+  padding: 118px 0 120px;
 
   @include vp-1199 {
     padding: 100px 0;
