--- a/source/sass/blocks/question.scss
+++ b/source/sass/blocks/question.scss
@@ -28,6 +28,7 @@
     }
 
     .question__sign {
+
       &::after,
       &::before {
         background-color: $color-default-blue;
@@ -48,6 +49,7 @@
     }
 
     .question__sign {
+
       &::after,
       &::before {
         background-color: $color-default-white;
@@ -57,9 +59,9 @@
 }
 
 .question.is-active .question__wrapper {
-  gap: 10px 0;
+  gap: 12px 0;
   margin: 0 0 10px;
-  padding: 40px 40px 35px;
+  padding: 40px 40px 31px;
   color: $color-default-white;
   background-color: $color-default-blue;
 
@@ -189,19 +191,25 @@
   grid-column: 1/2;
   grid-row: 1/2;
   margin: 0;
+  max-height: 54px;
   font-size: 28px;
   font-weight: 400;
-  line-height: 27px;
+  line-height: 34px;
 
   @include vp-1199 {
     font-size: 22px;
-    line-height: 21px;
+    line-height: 26px;
   }
 
   @include vp-767 {
     font-size: 16px;
     line-height: 18px;
   }
+}
+
+.question:nth-child(4n) h3,
+.question:nth-child(5n) h3 {
+  margin: -8px 0 8px;
 }
 
 .question__content {
