--- a/source/sass/blocks/question.scss
+++ b/source/sass/blocks/question.scss
@@ -61,6 +61,10 @@
 .question:nth-child(4n) .question__wrapper,
 .question:nth-child(5n) .question__wrapper {
   padding: 40px 40px 25px;
+
+  @include vp-1199 {
+    padding: 30px 30px 20px;
+  }
 }
 
 .question.is-active .question__wrapper {
@@ -71,7 +75,8 @@
   background-color: $color-default-blue;
 
   @include vp-1199 {
-    padding: 30px;
+    gap: 16px 0;
+    padding: 30px 30px 25px;
   }
 
   @include vp-767 {
@@ -215,6 +220,10 @@
 .question:nth-child(4n) h3,
 .question:nth-child(5n) h3 {
   margin: -8px 0 8px;
+
+  @include vp-1199 {
+    margin: -5px 0 5px;
+  }
 }
 
 .question__content {
