--- a/source/sass/blocks/hero-main.scss
+++ b/source/sass/blocks/hero-main.scss
@@ -96,7 +96,7 @@
   position: relative;
   display: flex;
   gap: 30px;
-  padding: 0 50px 20px;
+  padding: 0 50px 35px;
   width: 62.26%;
   color: $color-default-profect;
   background-color: $color-default-white;
@@ -129,11 +129,9 @@
 }
 
 .hero-main__description {
-  margin: -7px 0 7px;
 
   @include vp-767 {
     position: relative;
-    margin: 0;
     padding: 0 14px 10px;
     background-color: $color-default-white;
     border-radius: 0 0 14px 0;
@@ -159,7 +157,6 @@
     line-height: 20px;
 
     @include vp-767 {
-      margin: -5px 0 0;
       font-size: 14px;
     }
   }
@@ -178,13 +175,13 @@
   }
 }
 
-.hero-main__link a {
-  margin: 5px 0;
+// .hero-main__link a {
+//   margin: 5px 0;
 
-  @include vp-1199 {
-    margin: -2px;
-  }
-}
+//   @include vp-1199 {
+//     margin: -2px;
+//   }
+// }
 
 .hero-main__link svg {
   display: none;
