--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -69,6 +69,19 @@
 }
 
 .hero__item {
+  padding: 375px 0 60px;
+
+  @include vp-1199 {
+    padding: 632px 0 60px;
+  }
+
+  @include vp-767 {
+    margin: 0 0 -5px;
+    padding: 188px 0 25px;
+  }
+}
+
+.hero__item--experience {
   padding: 365px 0 60px;
 
   @include vp-1199 {
@@ -78,5 +91,13 @@
   @include vp-767 {
     margin: 0 0 -5px;
     padding: 188px 0 25px;
+  }
+
+  .hero-main__info {
+    padding: 5px 50px 15px;
+  }
+
+  .hero-main__description p {
+    margin: -10px 0 10px;
   }
 }
