Добавляет пп hero блок(фикс высота)

--- a/source/sass/blocks/hero-main.scss
+++ b/source/sass/blocks/hero-main.scss
@@ -1,5 +1,6 @@
 .hero-main {
   position: relative;
+  margin: 0 0 60px;
   text-align: start;
 }
 
@@ -95,6 +96,8 @@
 .hero-main__info {
   position: relative;
   display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
   gap: 30px;
   padding: 0 50px 35px;
   width: 62.26%;
