--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -69,30 +69,22 @@
 }
 
 .hero__item {
-  padding: 375px 0 60px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-start;
+  min-height: 718px;
 
   @include vp-1199 {
-    padding: 632px 0 60px;
+    min-height: 960px;
   }
 
   @include vp-767 {
-    margin: 0 0 -5px;
-    padding: 188px 0 25px;
+    min-height: 494px;
   }
 }
 
 .hero__item--experience {
-  padding: 365px 0 60px;
-
-  @include vp-1199 {
-    padding: 632px 0 60px;
-  }
-
-  @include vp-767 {
-    margin: 0 0 -5px;
-    padding: 188px 0 25px;
-  }
-
   .hero-main__info {
     padding: 5px 50px 15px;
   }
