--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -76,7 +76,7 @@
   min-height: 718px;
 
   @include vp-1199 {
-    min-height: 960px;
+    min-height: 941px;
   }
 
   @include vp-767 {
@@ -91,5 +91,15 @@
 
   .hero-main__description p {
     margin: -10px 0 10px;
+  }
+
+  @include vp-1199 {
+    .hero-main__info {
+      padding: 0 40px 27px;
+    }
+
+    .hero-main__description p {
+      margin: -5px 0 5px;
+    }
   }
 }
