Добавляет пп hero блок для мобилки(фикс высота)

--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -80,7 +80,7 @@
   }
 
   @include vp-767 {
-    min-height: 494px;
+    min-height: 496px;
   }
 }
 
@@ -100,6 +100,12 @@
 
     .hero-main__description p {
       margin: -5px 0 5px;
+    }
+  }
+
+  @include vp-767 {
+    .hero-main__info {
+      padding: 0;
     }
   }
 }
