--- a/source/sass/blocks/hero-main.scss
+++ b/source/sass/blocks/hero-main.scss
@@ -2,6 +2,10 @@
   position: relative;
   margin: 0 0 60px;
   text-align: start;
+
+  @include vp-767 {
+    margin: 0 0 20px;
+  }
 }
 
 .hero__swiper .swiper-pagination {
@@ -135,7 +139,7 @@
 
   @include vp-767 {
     position: relative;
-    padding: 0 14px 10px;
+    padding: 0 14px 5px;
     background-color: $color-default-white;
     border-radius: 0 0 14px 0;
   }
@@ -172,7 +176,7 @@
   @include vp-767 {
     position: relative;
     margin: 0;
-    padding: 12px 17px;
+    padding: 10px 15px;
     min-width: 182px;
     background-color: $color-default-white;
     border-radius: 0 0 14px 14px;
