--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -59,7 +59,7 @@
   &__content {
     position: relative;
     width: 510px;
-    padding: 54px 60px;
+    padding: 53px 60px 60px;
     border-radius: 16px;
 
     background-color: $color-default-white;
@@ -129,11 +129,11 @@
   flex-direction: column;
   align-items: center;
   padding: 0 20px;
-  margin: 0 0 30px;
+  margin: 0 0 18px;
 }
 
 .modal__header h2 {
-  margin: 0 0 40px 0;
+  margin: 0 0 10px;
   color: $color-default-blue;
   font-size: 32px;
   font-weight: 400;
@@ -166,8 +166,8 @@
 .modal__content form {
   display: flex;
   flex-direction: column;
-  gap: 20px;
-  margin: 0 0 30px;
+  gap: 18px;
+  margin: 0 20px 30px;
 }
 
 .modal__btn {
