--- a/source/sass/blocks/input-checkbox-modal.scss
+++ b/source/sass/blocks/input-checkbox-modal.scss
@@ -17,26 +17,26 @@
       }
     }
 
-    input:checked + .input-checkbox-modal__check::after {
+    input:checked+.input-checkbox-modal__check::after {
       border-right: 1px solid $color-default-profect;
       border-top: 1px solid $color-default-profect;
     }
 
-    input:checked + .input-checkbox-modal__check::before {
+    input:checked+.input-checkbox-modal__check::before {
       background-color: transparent;
     }
   }
 }
 
-.input-checkbox-modal__control input:checked + .input-checkbox-modal__check::after {
+.input-checkbox-modal__control input:checked+.input-checkbox-modal__check::after {
   opacity: 1;
 }
 
-.input-checkbox-modal__control input:checked + .input-checkbox-modal__check::before {
+.input-checkbox-modal__control input:checked+.input-checkbox-modal__check::before {
   background-color: $color-default-blue;
 }
 
-.input-checkbox-modal__control input:checked ~ .input-checkbox-modal__label {
+.input-checkbox-modal__control input:checked~.input-checkbox-modal__label {
   color: $color-default-profect;
 }
 
@@ -80,9 +80,13 @@
   line-height: 12px;
   cursor: pointer;
   z-index: 1;
+
+  @include vp-767 {
+    line-height: 14px;
+  }
 }
 
-.input-checkbox-modal__control input:hover ~ .input-checkbox-modal__label {
+.input-checkbox-modal__control input:hover~.input-checkbox-modal__label {
   color: $color-default-profect;
 }
 
