--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -66,7 +66,7 @@
 
     @include vp-767 {
       width: 100%;
-      padding: 40px 15px;
+      padding: 37px 15px 40px;
     }
   }
 
@@ -82,16 +82,27 @@
     border: none;
     cursor: pointer;
 
+    @include vp-767 {
+      top: 20px;
+      right: 20px;
+      width: 16px;
+      height: 16px;
+    }
+
     &::before,
     &::after {
       content: "";
       position: absolute;
       top: 50%;
-      right: 0;
+      right: -3px;
       width: 28px;
       height: 1px;
       background-color: $color-default-blue;
       z-index: 2;
+
+      @include vp-767 {
+        width: 20px;
+      }
     }
 
     &::before {
@@ -134,6 +145,11 @@
   @include vp-1199 {
     margin: 0 0 22px;
   }
+
+  @include vp-767 {
+    margin: 0 0 20px;
+    padding: 0 25px;
+  }
 }
 
 .modal__header h2 {
@@ -150,6 +166,7 @@
   }
 
   @include vp-767 {
+    margin: 0 0 8px;
     font-size: 18px;
     line-height: 18px;
   }
@@ -173,6 +190,11 @@
   flex-direction: column;
   gap: 18px;
   margin: 0 20px 30px;
+
+  @include vp-767 {
+    gap: 15px;
+    margin: 0 0 25px;
+  }
 }
 
 .modal__btn {
@@ -180,6 +202,9 @@
   width: 194px;
 
   @include vp-767 {
+    display: flex;
+    justify-content: center;
+    padding: 16px 40px 16px 0;
     width: 100%;
   }
 }
