Добавляет исправление резины

--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -74,6 +74,7 @@ $trans-600:                         0.6s $tf-default;
 // Viewports
 // ---------------------------------
 
+$vp-375:                            375px;
 $vp-768:                            768px;
 $vp-1200:                           1200px;
 
