--- a/source/sass/blocks/programs-card.scss
+++ b/source/sass/blocks/programs-card.scss
@@ -70,7 +70,7 @@
   padding: 13px 18px 1px;
   width: calc(100% - 158px);
   min-width: 194px;
-  background-color: $color-timber-wolf;
+  background-color: $color-default-white;
   border-radius: 12px 12px 0 0;
 
   @include vp-1199 {
@@ -118,7 +118,7 @@
   padding: 12px 18px 15px 18px;
   width: calc(100% - 31px);
   min-height: 79px;
-  background-color: $color-timber-wolf;
+  background-color: $color-default-white;
   border-radius: 0 12px 12px 12px;
 
   @include vp-1199 {
