--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -72,6 +72,12 @@
   }
 }
 
+@mixin vp-374 {
+  @media (max-width: ($vp-375 - 1px)) {
+    @content;
+  }
+}
+
 // Mobile first
 
 // @mixin vp-375 {
