--- a/source/sass/blocks/footer-header.scss
+++ b/source/sass/blocks/footer-header.scss
@@ -22,10 +22,12 @@
   gap: 30px;
   margin: 0;
   padding: 0;
+  max-width: 700px;
   list-style-type: none;
 
   @include vp-1199 {
     gap: 15px;
+    max-width: 100%;
   }
 
   @include vp-767 {
