--- a/source/sass/blocks/hero-main.scss
+++ b/source/sass/blocks/hero-main.scss
@@ -183,13 +183,13 @@
   }
 }
 
-// .hero-main__link a {
-//   margin: 5px 0;
+.hero-main__link a {
+  width: 196px;
 
-//   @include vp-1199 {
-//     margin: -2px;
-//   }
-// }
+  @include vp-767 {
+    width: 152px;
+  }
+}
 
 .hero-main__link svg {
   display: none;
