--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -4,9 +4,11 @@
   gap: 20px;
   margin: 0;
   padding: 0;
+  max-width: 148px;
   list-style-type: none;
 
   @include vp-1199 {
+    max-width: 100%;
     gap: 10px;
     order: 3;
   }
