--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -15,6 +15,7 @@
   letter-spacing: 0.28px;
   text-transform: uppercase;
   cursor: pointer;
+  user-select: none;
 
   @include vp-767 {
     padding: 16px 42px 16px 20px;
