--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -94,7 +94,7 @@
 .form form {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 19px;
   margin: 0 0 40px;
 
   @include vp-1199 {
@@ -108,6 +108,7 @@
 }
 
 .form__btn {
+  justify-content: flex-start;
+  padding: 18px 55px 18px 107px;
   width: 100%;
-  justify-content: center;
 }
