--- a/source/sass/blocks/reviews-card.scss
+++ b/source/sass/blocks/reviews-card.scss
@@ -1,5 +1,5 @@
 .reviews-card {
-  padding: 50px 30px 40px;
+  padding: 50px 30px 42px;
   height: auto;
   border: 1px solid $color-default-blue;
   border-radius: 16px;
@@ -18,7 +18,7 @@
   grid-template-columns: auto 1fr;
   gap: 26px;
   margin: 0 auto;
-  max-width: 509px;
+  max-width: 504px;
 
   @include vp-1199 {
     max-width: 100%;
@@ -90,16 +90,20 @@
 
 .reviews-card__list {
   display: flex;
-  gap: 25px;
+  gap: 26px;
   margin: 0;
   padding: 0;
   list-style-type: none;
+
+  @include vp-1199 {
+    gap: 25px;
+  }
 }
 
 .reviews-card__item {
   display: flex;
   flex-direction: column;
-  gap: 11px;
+  gap: 6px;
 
   @include vp-1199 {
     gap: 5px;
@@ -145,13 +149,14 @@
 }
 
 .reviews-card__content h3 {
-  margin: 0 0 15px;
+  margin: 0 0 13px;
   color: $color-default-blue;
   font-size: 24px;
   font-weight: 400;
   line-height: 26px;
 
   @include vp-1199 {
+    margin: 0 0 15px;
     font-size: 20px;
     line-height: 24px;
   }
