--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -24,7 +24,7 @@
 }
 
 .reviews__header h2 {
-  margin: 0;
+  margin: 0 0 0 3px;
   color: $color-default-blue;
   font-size: 50px;
   font-style: normal;
@@ -32,6 +32,7 @@
   line-height: 50px;
 
   @include vp-1199 {
+    margin: 0;
     font-size: 34px;
   }
 
