--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -95,7 +95,7 @@
 
   @include vp-1199 {
     .hero-main__info {
-      padding: 0 40px 27px;
+      padding: 0 41px 27px 40px;
     }
 
     .hero-main__description p {
