--- a/source/sass/blocks/reviews-card.scss
+++ b/source/sass/blocks/reviews-card.scss
@@ -5,11 +5,11 @@
   border-radius: 16px;
 
   @include vp-1199 {
-    padding: 50px 50px 45px;
+    padding: 50px 53px 46px 50px;
   }
 
   @include vp-767 {
-    padding: 30px 13px 25px 15px;
+    padding: 30px 13px 23px 15px;
   }
 }
 
@@ -21,6 +21,7 @@
   max-width: 504px;
 
   @include vp-1199 {
+    gap: 25px;
     max-width: 100%;
   }
 
@@ -156,12 +157,13 @@
   line-height: 26px;
 
   @include vp-1199 {
-    margin: 0 0 15px;
+    margin: 0 0 16px;
     font-size: 20px;
     line-height: 24px;
   }
 
   @include vp-767 {
+    margin: 0 0 15px;
     font-size: 16px;
     line-height: 18px;
   }
