--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -77,6 +77,10 @@
   letter-spacing: 0.12px;
   text-transform: uppercase;
 
+  @include vp-1199 {
+    margin: 0 0 18px;
+  }
+
   @include vp-767 {
     margin: 0 0 8px;
   }
