--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -6,6 +6,10 @@
   gap: 25px;
   padding: 5px 0 50px;
 
+  @include vp-1199 {
+    gap: 23px;
+  }
+
   @include vp-767 {
     flex-direction: column;
     justify-content: center;
