--- a/source/sass/blocks/hero-main.scss
+++ b/source/sass/blocks/hero-main.scss
@@ -122,7 +122,7 @@
   border-radius: 0 0 30px 30px;
 
   @include vp-1199 {
-    padding: 0px 40px 28px;
+    padding: 0 40px 28px;
     width: 87.2%;
   }
 
@@ -148,7 +148,6 @@
 }
 
 .hero-main__description {
-
   @include vp-767 {
     position: relative;
     padding: 0 14px 5px;
