--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -109,8 +109,12 @@
 
 .form__btn {
   justify-content: flex-start;
-  padding: 18px 55px 18px 109px;
+  padding: 18px 55px 18px 108px;
   width: 100%;
+
+  @include vp-1199 {
+    padding: 18px 55px 18px 109px;
+  }
 
   @include vp-767 {
     padding: 14px 55px 14px 74px;
